--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for(@product, :html => {:multipart => true}) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -47,6 +47,16 @@
     <%= f.label :user_id %><br>
     <%= f.number_field :user_id %>
   </div>
+
+  <div class="field">
+    <%= f.label :"Add Image" %><br>
+    <%= f.file_field :image  %>
+  </div>
+  <div class="field">
+    <%= f.label :remote_image_url, "or Image URL" %><br />
+    <%= f.text_field :remote_image_url %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
