--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,6 +29,7 @@
         <td><%= product.price %></td>
         <td><%= product.duration %></td>
         <td><%= product.description %></td>
+        <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
         <td><%= product.user_id %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
