--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,5 +45,7 @@
   <%= @product.user_id %>
 </p>
 
+<%= image_tag @product.image_url(:normal) if @product.image? %>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
