--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shareflair</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+
+      <!-- Bootstrap core CSS -->
+    <link href="http://bootswatch.com/amelia/bootstrap.css" rel="stylesheet">
+
+    <!-- Add custom CSS here -->
+    <link href="css/shop-homepage.css" rel="stylesheet">
 </head>
 <body>
 
+<div class="container">
 <%= yield %>
+</div> <!-- /container -->
 
 </body>
+
+        
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation"">
+    <div class="container">  
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Share Flair</a>
+			</div>
+
+      
+      <ul class="nav navbar-nav navbar-right">
+      	<form class="navbar-form navbar-left">
+          <input class="form-control col-lg-8" type="text" placeholder="Search"></input>
+      	</form>
+      </ul>
+		</div>
+	</div>
 </html>
