--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,21 @@
-<h1>Listing products</h1>
+<div class="bs-docs-section">
 
-<table>
+  <%= link_to 'New Product', new_product_path, class: "btn btn-success btn-df" %>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+
+                    Products
+
+                </h1>
+            </div>
+            <div class="bs-example table-responsive">
+                <table class="table table-striped table-bordered table-hover ">
+                    
+
+
   <thead>
     <tr>
       <th>Title</th>
@@ -11,8 +26,8 @@
       <th>Price</th>
       <th>Duration</th>
       <th>Description</th>
+      <th>Image</th>      
       <th>User</th>
-      <th></th>
       <th></th>
       <th></th>
     </tr>
@@ -32,8 +47,8 @@
         <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
         <td><%= product.user_id %></td>
         <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm" %></td>
+        <td><%= link_to 'Destroy', product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -41,4 +56,10 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<% if notice %> 
+  <p id="notice" class="alert alert-success alert-dismissable fade in" data-dismiss="alert" aria-hidden="true">
+    <%= notice %>
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  </p>
+<% end %>
+
