--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -30,6 +30,7 @@
       <th>User</th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -46,7 +47,7 @@
         <td><%= product.description %></td>
         <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
         <td><%= product.user_id %></td>
-        <td><%= link_to 'Show', product %></td>
+        <td><%= link_to 'Show', product, class: "btn btn-info btn-sm" %></td>
         <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm" %></td>
         <td><%= link_to 'Destroy', product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
