Landing Page, suchen und inserieren fertig gelinkt

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -4,3 +4,12 @@ body {
 th {
   background-color:   #20B2AA;
 }
+
+h1 {
+   vertical-align: middle;
+   text-align: center;
+   }
+
+.lead {
+  text-align: center;
+}
