--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,19 @@
   <%= csrf_meta_tags %>
 
       <!-- Bootstrap core CSS -->
-    <link href="http://bootswatch.com/amelia/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
+    <link href="http://bootswatch.com/amelia/bootstrap.css" rel="stylesheet">
+
     <link href="css/shop-homepage.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container">
+
+
+
 <%= yield %>
 </div> <!-- /container -->
 
@@ -26,7 +31,22 @@
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation"">
     <div class="container">  
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Share Flair</a>
+        <a class="navbar-brand" <%= link_to "Share Flair", :controller => "home", :action => "index" %></a>
+		    <ul class="nav nav-pills pull-right">
+		    	<li class="active">
+		        <%= link_to "Suchen", :controller => "products", :action => "index" %>
+		    	</li>
+		    	<li class="active">
+		        <%= link_to "Inserieren", :controller => "products", :action => "new" %>
+		    	</li>
+		    	<li class="active">
+		        <%= link_to "User", :controller => "home", :action => "user" %>
+		    	</li>
+		    	<li class="active">
+		        <%= link_to "About", :controller => "home", :action => "about" %>
+		    	</li>
+
+		  </ul>
 			</div>
 
       
@@ -38,3 +58,4 @@
 		</div>
 	</div>
 </html>
+
