--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,63 +1,80 @@
-<%= form_for(@product, :html => {:multipart => true}) do |f| %>
-  <% if @product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+<%= form_for @product, :html => {:multipart => true, :role => "form"} do |f| %>
 
-      <ul>
+  <% if @product.errors.any? %>
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</div>
+      <div class="panel-body">
+        <ul>
       <% @product.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
+    </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :category %><br>
-    <%= f.text_field :category %>
-  </div>
-  <div class="field">
-    <%= f.label :target_group %><br>
-    <%= f.text_field :target_group %>
-  </div>
-  <div class="field">
-    <%= f.label :size %><br>
-    <%= f.text_field :size %>
-  </div>
-  <div class="field">
-    <%= f.label :color %><br>
-    <%= f.text_field :color %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="field">
-    <%= f.label :duration %><br>
-    <%= f.text_field :duration %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
+<div class="panel panel-info">
+  <div class="panel-body">
 
-  <div class="field">
-    <%= f.label :"Add Image" %><br>
-    <%= f.file_field :image  %>
+  <div class="form-group has-success">
+
+    <label class="control-label" for="inputSuccess"><%= f.label :title %></label>
+
+    <%= f.text_field :title, class: "form-control" %>
+
   </div>
-  <div class="field">
-    <%= f.label :remote_image_url, "or Image URL" %><br />
-    <%= f.text_field :remote_image_url %>
-  </div>
+    <div class="form-group has-success">
+      <label class="control-label" for="inputSuccess"><%= f.label :category %></label>
+      
+      <%= f.text_field :category,  class: "form-control" %>
+    </div>
+
+    <div class="form-group has-success">
+      <label class="control-label" for="inputSuccess"><%= f.label :target_group %></label>
+
+      <%= f.text_field :target_group, class: "form-control"  %>
+    </div>
+    <div class="form-group has-success">
+      <label class="control-label" for="inputSuccess"><%= f.label :size %></label>
+      <%= f.text_field :size, class: "form-control"  %>
+    </div>
+    <div class="form-group">
+      <%= f.label :color %><br>
+      <%= f.text_field :color, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :price %><br>
+      <%= f.text_field :price, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :duration %><br>
+      <%= f.text_field :duration, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :description %><br>
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :user_id %><br>
+      <%= f.number_field :user_id, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :"Add Image" %><br>
+      <%= f.file_field :image  %>
+    </div>
+    <div class="form-group">
+      <%= f.label :remote_image_url, "or Image URL" %><br />
+      <%= f.text_field :remote_image_url, class: "form-control" %>
+    </div>
+
+    </div>
+      </div>
 
   <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.submit "Save Product", class: "btn btn-success"%>
+    <%= link_to 'Cancel', products_path, class: "btn btn-danger" %>
+  </div>    
+</div>
 <% end %>
