bevor user devise

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
                     <div class="item">
                         <h1>Share Flair</h1>
 												<p class="lead">
-												    Teilen macht spaß ;)
+												    Teilen Macht Spaß ;)
 												</p>
                     </div>
                     <div class="item">
@@ -24,7 +24,7 @@
                     <div class="item active">
                         <h1>Share Flair</h1>
 												<p class="lead">
-												    Next generation styling
+												    Next Generation Clothing
 												</p>
                     </div>
                 </div>
