--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,46 +16,17 @@
 
     <link href="css/shop-homepage.css" rel="stylesheet">
 </head>
+
 <body>
+<%= render 'layouts/navigation' %>
 
 <div class="container">
-
-
-
-<%= yield %>
-</div> <!-- /container -->
+  <%= render 'layouts/messages' %>
+    <%= yield %>
+</div> 
 
 </body>
-
-        
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation"">
-    <div class="container">  
-      <div class="navbar-header">
-        <a class="navbar-brand" <%= link_to "Share Flair", :controller => "home", :action => "index" %></a>
-		    <ul class="nav nav-pills pull-right">
-		    	<li class="active">
-		        <%= link_to "Suchen", :controller => "products", :action => "index" %>
-		    	</li>
-		    	<li class="active">
-		        <%= link_to "Inserieren", :controller => "products", :action => "new" %>
-		    	</li>
-		    	<li class="active">
-		        <%= link_to "User", :controller => "home", :action => "user" %>
-		    	</li>
-		    	<li class="active">
-		        <%= link_to "About", :controller => "home", :action => "about" %>
-		    	</li>
-
-		  </ul>
-			</div>
-
-      
-      <ul class="nav navbar-nav navbar-right">
-      	<form class="navbar-form navbar-left">
-          <input class="form-control col-lg-8" type="text" placeholder="Search"></input>
-      	</form>
-      </ul>
-		</div>
-	</div>
 </html>
+
+
 
