--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -8,20 +8,37 @@
                 <span class="icon-bar"></span>
             </button>
 
-        <a class="navbar-brand" <%= link_to "Share Flair", :controller => "home", :action => "index" %></a>
+        <a class="navbar-brand" <%= link_to "Share Flair", home_index_path %></a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       	<ul class="nav navbar-nav">
-		      <li class="link"><%= link_to "Suchen", :controller => "products", :action => "index" %></li>
-		    	<li class="link"><%= link_to "Inserieren", :controller => "products", :action => "new" %></li>
-		    	<li class="link"><%= link_to "User", :controller => "home", :action => "user" %></li>
-		    	<li class="link"><%= link_to "About", :controller => "home", :action => "about" %></li>
+		      <li class="link"><%= link_to "Suchen", products_path %></li>
+		    	<li class="link"><%= link_to "Inserieren", new_product_path %></li>
+		    	<li class="link"><%= link_to "About", home_about_path %></li>
 		    	<form class="navbar-form navbar-left">
 						<input class="form-control col-lg-8" type="text" placeholder="Search"></input>
 					</form>
 
-        
+        </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <% if user_signed_in? %>
+                <li>
+                    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
+                </li>
+                <li>
+                    <%= link_to "Logged in as " + current_user.username, edit_user_registration_path %> 
+                </li>
+                <% else %>
+                <li>
+                    <%= link_to 'Login', new_user_session_path %>
+                </li>
+                <li>
+                    <%= link_to 'Sign up', new_user_registration_path %>
+                </li>
+                <% end %>
+            </ul>
         </div>
     </div>
 </div
