Login mit email

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -28,7 +28,7 @@
                     <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
                 </li>
                 <li>
-                    <%= link_to "Logged in as " + current_user.username, edit_user_registration_path %> 
+                    <%= link_to "Logged in as " + current_user.email, edit_user_registration_path %> 
                 </li>
                 <% else %>
                 <li>
