--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -46,7 +46,7 @@
         <td><%= product.duration %></td>
         <td><%= product.description %></td>
         <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
-        <td><%= product.user_id %></td>
+        <td><%= product.user.username %></td>
         <td><%= link_to 'Show', product, class: "btn btn-info btn-sm" %></td>
         <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm" %></td>
         <td><%= link_to 'Destroy', product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %></td>
