--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,13 +27,13 @@
     <div class="form-group has-success">
       <label class="control-label" for="inputSuccess"><%= f.label :category %></label>
       
-      <%= f.text_field :category,  class: "form-control" %>
-    </div>
+      <%= f.select :category_id, Category.all.collect {|c| [ c.name, c.id ] }, { :include_blank => true, :selected => @product.category_id}, class: "form-control" %>
+</div>
 
     <div class="form-group has-success">
       <label class="control-label" for="inputSuccess"><%= f.label :target_group %></label>
 
-      <%= f.text_field :target_group, class: "form-control"  %>
+      <%= f.select :target_group, ["Männlich", "Weiblich"], {:selected => "Männlich"}, class: "form-control"  %>
     </div>
     <div class="form-group has-success">
       <label class="control-label" for="inputSuccess"><%= f.label :size %></label>
