--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -38,7 +38,7 @@
     <% @products.each do |product| %>
       <tr>
         <td><%= product.title %></td>
-        <td><%= product.category %></td>
+        <td><%= product.category.name %></td>
         <td><%= product.target_group %></td>
         <td><%= product.size %></td>
         <td><%= product.color %></td>
