--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -3,6 +3,8 @@ body {
 }
 th {
   background-color:   #20B2AA;
+  font-weight:bold;
+  font-size:120%;
 }
 
 h1 {
@@ -17,5 +19,7 @@ h1 {
 body {
   padding-left: 50px;
   padding-right: 50px;
+  padding-bottom: 50px;
+
 }
 
