--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,17 @@
   <%= f.email_field :email, :autofocus => true %></div>
   <div><%= f.label :username %><br />
   <%= f.text_field :username %></div>
+    <div><%= f.label :gender %><br />
+  <%= f.text_field :gender %></div>
+    <div><%= f.label :address %><br />
+  <%= f.text_field :address %></div>
+    <div><%= f.label :city %><br />
+  <%= f.text_field :city %></div>
+  <div><%= f.label :phone_number %><br />
+  <%= f.text_field :phone_number %></div>
+    <div><%= f.label :description %><br />
+  <%= f.text_area :description %></div>
+
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
