--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -30,7 +30,7 @@
                     <tbody>
                       <% @products.each do |product| %>
                         <tr>
-                          <td><%= product.title %></td>
+                          <td><h4><%= link_to product.title, product_path(product)  %> </h4></td>
                           <td><%= product.category.name %></td>
                           <td><%= product.target_group %></td>
                           <td><%= product.size %></td>
