--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -17,9 +17,11 @@ h1 {
 }
 
 body {
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 10%;
 
 }
+
+
 
