--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,58 +1,1 @@
-<div class="bs-docs-section">
-
-  <%= link_to 'Insert New Product', new_product_path, class: "btn btn-success btn-df" %>
-              
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1 id="tables">
-                    Products
-                </h1>
-            </div>
-            <div class="bs-example table-responsive">
-                <table class="table table-striped table-bordered table-hover ">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Category</th>
-                            <th>Target group</th>
-                            <th>Size</th>
-                            <th>Color</th>
-                            <th>Price</th>
-                            <th>Duration</th>
-                            <th>Description</th>
-                            <th>Image</th>      
-                            <th>User</th>
-                        </tr>
-                    </thead>
-    
-
-                    <tbody>
-                      <% @products.each do |product| %>
-                        <tr>
-                          <td><h4><%= link_to product.title, product_path(product)  %> </h4></td>
-                          <td><%= product.category.name %></td>
-                          <td><%= product.target_group %></td>
-                          <td><%= product.size %></td>
-                          <td><%= product.color %></td>
-                          <td><%= product.price %></td>
-                          <td><%= product.duration %></td>
-                          <td><%= product.description %></td>
-                          <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
-                          <td><%= product.user.username %></td>
-                          <td><%= link_to 'Show', product, class: "btn btn-info btn-sm" %></td>
-                          <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm" %></td>
-                          <td><%= link_to 'Delete', product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                        </tr>
-                      <% end %>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
-</div>
-<br>
-
-
-
+<%= render 'table' %>
