man, lady, ... views erstellt

--- a/app/views/products/man.html.erb
+++ b/app/views/products/man.html.erb
@@ -1,5 +1,7 @@
-<%= find_man %>
+<div class="container">
+                 
 
 
-
-<%= render 'table' %>
+  <%= render 'table' %>
+    <%= yield %>
+</div> 
