--- a/app/views/products/lady.html.erb
+++ b/app/views/products/lady.html.erb
@@ -1,2 +1,7 @@
-<h1>Products#lady</h1>
-<p>Find me in app/views/products/lady.html.erb</p>
+<div class="container">
+                 
+
+
+  <%= render 'table' %>
+    <%= yield %>
+</div> 
