view für neueste Eintraege erstellt

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,8 @@
 	    <div class="thumbnail">
 	        <img src="http://placehold.it/320x150" alt="">
 	        <div class="caption">
-	            <h4><a href="#">Ladies</a>
+	            <h4>
+	            	<a href="products/lady">Ladies</a>
 	            </h4>
 	        </div>
 	  	</div>
