--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+<div class="container">
 <%= render 'layouts/navigation' %>
 
 <div class="container">
@@ -27,7 +28,9 @@
     <%= yield %>
 </div> 
 
+</div>
 </body>
+
 </html>
 
 
