Verlinkung von startseite auf man, lady, ..

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,7 +56,8 @@
 	    <div class="thumbnail">
 	        <img src="http://placehold.it/320x150" alt="">
 	        <div class="caption">
-	            <h4><a href="#">Girls</a>
+	            <h4>
+	            	<a href="products/girl">Girls</a>
 	            </h4>
 	        </div>
 	  	</div>
@@ -66,7 +67,8 @@
 	    <div class="thumbnail">
 	        <img src="http://placehold.it/320x150" alt="">
 	        <div class="caption">
-	            <h4><a href="#">Babies</a>
+	            <h4>
+	            	<a href="products/baby">Babies</a>
 	            </h4>
 	        </div>
 	  	</div>
@@ -76,7 +78,8 @@
 	    <div class="thumbnail">
 	        <img src="http://placehold.it/320x150" alt="">
 	        <div class="caption">
-	            <h4><a href="#">Gentlemen</a>
+	            <h4>
+	            	<a href="products/man">Gentlemen</a>
 	            </h4>
 	        </div>
 	  	</div>
@@ -86,7 +89,8 @@
 	    <div class="thumbnail">
 	        <img src="http://placehold.it/320x150" alt="">
 	        <div class="caption">
-	            <h4><a href="#">Boys</a>
+	            <h4>
+	            	<a href="products/boy">Boys</a>
 	            </h4>
 	        </div>
 	  	</div>
@@ -96,7 +100,8 @@
 	    <div class="thumbnail">
 	        <img src="http://placehold.it/320x150" alt="">
 	        <div class="caption">
-	            <h4><a href="#">New</a>
+	            <h4>
+	            	<a href="products/last">Most Recent</a>
 	            </h4>
 	        </div>
 	  	</div>
