--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,7 +43,7 @@
 
 	<div class="col-sm-4 col-lg-4 col-md-4">
 	    <div class="thumbnail">
-	        <img src="http://placehold.it/320x150" alt="">
+	       <a href="products/lady"> <img src="http://placehold.it/320x150" alt=""> </a>
 	        <div class="caption">
 	            <h4>
 	            	<a href="products/lady">Ladies</a>
@@ -54,7 +54,7 @@
 
 	<div class="col-sm-4 col-lg-4 col-md-4">
 	    <div class="thumbnail">
-	        <img src="http://placehold.it/320x150" alt="">
+	        <a href="products/girl"> <img src="http://placehold.it/320x150" alt=""> </a>
 	        <div class="caption">
 	            <h4>
 	            	<a href="products/girl">Girls</a>
@@ -65,7 +65,7 @@
 
 	<div class="col-sm-4 col-lg-4 col-md-4">
 	    <div class="thumbnail">
-	        <img src="http://placehold.it/320x150" alt="">
+	       <a href="products/baby"> <img src="http://placehold.it/320x150" alt=""> </a>
 	        <div class="caption">
 	            <h4>
 	            	<a href="products/baby">Babies</a>
@@ -76,7 +76,7 @@
 
 	<div class="col-sm-4 col-lg-4 col-md-4">
 	    <div class="thumbnail">
-	        <img src="http://placehold.it/320x150" alt="">
+	       <a href="products/man"> <img src="http://placehold.it/320x150" alt=""> </a>
 	        <div class="caption">
 	            <h4>
 	            	<a href="products/man">Gentlemen</a>
@@ -87,7 +87,7 @@
 
 	<div class="col-sm-4 col-lg-4 col-md-4">
 	    <div class="thumbnail">
-	        <img src="http://placehold.it/320x150" alt="">
+	        <a href="products/boy"> <img src="http://placehold.it/320x150" alt=""> </a>
 	        <div class="caption">
 	            <h4>
 	            	<a href="products/boy">Boys</a>
@@ -98,7 +98,7 @@
 
 	<div class="col-sm-4 col-lg-4 col-md-4">
 	    <div class="thumbnail">
-	        <img src="http://placehold.it/320x150" alt="">
+	        <a href="products/last"> <img src="http://placehold.it/320x150" alt=""> </a>
 	        <div class="caption">
 	            <h4>
 	            	<a href="products/last">Most Recent</a>
