--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -30,8 +30,8 @@
                     <tbody>
                       <% @products.each do |product| %>
                         <tr>
-                          <td><h4><%= link_to product.title, product_path(product) %></h4></td>
-                          <td><%= product.category.name %></td>
+                          <td class="table"><h4><%= link_to product.title, product_path(product) %></h4></td>
+                          <td ><%= product.category.name %></td>
                           <td><%= product.target_group %></td>
                           <td><%= product.size %></td>
                           <td><%= product.color %></td>
