--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-        <a class="navbar-brand" <%= link_to "Share Flair", home_index_path %></a>
+        <a class="navbar-brand" <%= link_to "Share Flair", root_path %></a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
