--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,42 +1,61 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h1>Edit <%= resource_name.to_s.humanize %></h1>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-  <div><%= f.label :username %><br />
-  <%= f.text_field :username %></div>
-    <div><%= f.label :gender %><br />
-  <%= f.text_field :gender %></div>
-    <div><%= f.label :address %><br />
-  <%= f.text_field :address %></div>
-    <div><%= f.label :city %><br />
-  <%= f.text_field :city %></div>
-  <div><%= f.label :phone_number %><br />
-  <%= f.text_field :phone_number %></div>
-    <div><%= f.label :description %><br />
-  <%= f.text_area :description %></div>
+  <div class="col-lg-8 col-lg-offset-2">
+   <div class="well">
+      <div class="panel panel-info">
+        <div class="panel-body">
+
+        <div class="form-group has-success">
+
+              <div class="form-group has-success"><%= f.label :email %><br />
+              <%= f.email_field :email, :autofocus => true, class: "form-control"  %></div>
+
+              <div class="form-group has-success"><%= f.label :username %><br />
+              <%= f.text_field :username, class: "form-control"  %></div>
+
+              <div class="form-group has-success"><%= f.label :gender %><br />
+              <%= f.text_field :gender, class: "form-control"  %></div>
+
+               <div class="form-group has-success"><%= f.label :address %><br />
+              <%= f.text_field :address, class: "form-control"  %></div>
+
+              <div class="form-group has-success"><%= f.label :city %><br />
+              <%= f.text_field :city, class: "form-control"  %></div>
+
+              <div class="form-group has-success"><%= f.label :phone_number %><br />
+              <%= f.text_field :phone_number, class: "form-control"  %></div>
+
+              <div class="form-group has-success"><%= f.label :description %><br />
+              <%= f.text_area :description, class: "form-control"  %></div>
 
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+              <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+              <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+              <div class="form-group has-success"><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+              <%= f.password_field :password, :autocomplete  => "off", class: "form-control" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+              <div  class="form-group has-success"><%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, class: "form-control"  %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+              <div class="form-group has-success"><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+              <%= f.password_field :current_password, class: "form-control"  %></div>
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
+              <div class="actions"><%= f.submit "Update", class: "btn btn-success" %></div>
+            <% end %>
 
-<h3>Cancel my account</h3>
+            <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+            <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, class: "btn btn-danger" %></p>
 
-<%= link_to "Back", :back %>
+            
+        </div>
+      </div>
+    </div>
+    <%= link_to "Back", :back %>
+  </div>
+</div>
