--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -14,63 +14,70 @@
     </div>
   <% end %>
 
-<div class="panel panel-info">
-  <div class="panel-body">
 
-  <div class="form-group has-success">
+<div class="col-lg-8 col-lg-offset-2">
+   <div class="well">
+      <div class="panel panel-info">
+        <div class="panel-body">
 
-    <label class="control-label" for="inputSuccess"><%= f.label :title %></label>
+        <div class="form-group has-success">
 
-    <%= f.text_field :title, class: "form-control" %>
+          <label class="control-label" for="inputSuccess"><%= f.label :title %></label>
 
-  </div>
-    <div class="form-group has-success">
-      <label class="control-label" for="inputSuccess"><%= f.label :category %></label>
-      
-      <%= f.select :category_id, Category.all.collect {|c| [ c.name, c.id ] }, { :include_blank => true, :selected => @product.category_id}, class: "form-control" %>
-</div>
+          <%= f.text_field :title, class: "form-control" %>
 
-    <div class="form-group has-success">
-      <label class="control-label" for="inputSuccess"><%= f.label :target_group %></label>
-
-      <%= f.select :target_group, ["Ladies", "Girls", "Gentlemen", "Boys", "Babies" ], {:include_blank => true}, class: "form-control"  %>
-    </div>
-    <div class="form-group has-success">
-      <label class="control-label" for="inputSuccess"><%= f.label :size %></label>
-      <%= f.text_field :size, class: "form-control"  %>
-    </div>
-    <div class="form-group">
-      <%= f.label :color %><br>
-      <%= f.text_field :color, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :price %><br>
-      <%= f.text_field :price, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :duration %><br>
-      <%= f.text_field :duration, class: "form-control" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :description %><br>
-      <%= f.text_area :description, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :"Add Image" %><br>
-      <%= f.file_field :image  %>
-    </div>
-    <div class="form-group">
-      <%= f.label :remote_image_url, "or Image URL" %><br />
-      <%= f.text_field :remote_image_url, class: "form-control" %>
-    </div>
-
-    </div>
+        </div>
+          <div class="form-group has-success">
+            <label class="control-label" for="inputSuccess"><%= f.label :category %></label>
+            
+            <%= f.select :category_id, Category.all.collect {|c| [ c.name, c.id ] }, { :include_blank => true, :selected => @product.category_id}, class: "form-control" %>
       </div>
 
-  <div class="actions">
-    <%= f.submit "Save Product", class: "btn btn-success"%>
-    <%= link_to 'Cancel', products_path, class: "btn btn-danger" %>
-  </div>    
+          <div class="form-group has-success">
+            <label class="control-label" for="inputSuccess"><%= f.label :target_group %></label>
+
+            <%= f.select :target_group, ["Ladies", "Girls", "Gentlemen", "Boys", "Babies" ], {:include_blank => true}, class: "form-control"  %>
+          </div>
+          <div class="form-group has-success">
+            <label class="control-label" for="inputSuccess"><%= f.label :size %></label>
+            <%= f.text_field :size, class: "form-control"  %>
+          </div>
+          <div class="form-group">
+            <%= f.label :color %><br>
+            <%= f.text_field :color, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :price %><br>
+            <%= f.text_field :price, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :duration %><br>
+            <%= f.text_field :duration, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :description %><br>
+            <%= f.text_area :description, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :"Add Image" %><br>
+            <%= f.file_field :image  %>
+          </div>
+          <div class="form-group">
+            <%= f.label :remote_image_url, "or Image URL" %><br />
+            <%= f.text_field :remote_image_url, class: "form-control" %>
+          </div>
+
+          </div>
+            </div>
+
+        <div class="actions">
+          <%= f.submit "Save Product", class: "btn btn-success"%>
+          <%= link_to 'Cancel', products_path, class: "btn btn-danger" %>
+        </div>    
+      </div>
+
+    </div> 
 </div>
+
 <% end %>
