--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -47,12 +47,12 @@
             <%= f.text_field :color, class: "form-control" %>
           </div>
           <div class="form-group">
-            <%= f.label :price %><br>
-            <%= f.text_field :price, class: "form-control" %>
+            <%= f.label :"Price in € " %><br>
+            <%= f.text_field :price, :placeholder =>"any prices in € or 'negotiable'",  class: "form-control" %>
           </div>
           <div class="form-group">
-            <%= f.label :duration %><br>
-            <%= f.text_field :duration, class: "form-control" %>
+            <%= f.label :"Price is based on" %><br>
+            <%= f.text_field :duration, :placeholder =>"e.g days, week, month", class: "form-control" %>
           </div>
           <div class="form-group">
             <%= f.label :description %><br>
