Buttons auf index seite in der tabelle geloescht

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,10 +53,11 @@
                     </li>
                   </ul>
 
-<%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |
-<%= link_to 'Back', products_path, class: "btn btn-info btn-sm"  %> |
+            <%= link_to 'Back', products_path, class: "btn btn-info "  %> |
+            <%= link_to 'Edit', edit_product_path(@product), class: "btn btn-warning btn-sm"  %> |            
+            <%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
 
-<%= link_to 'Delete', @product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %>
+          
 
             </div>
 
