--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -18,9 +18,9 @@
                             <th>Target group</th>
                             <th>Size</th>
                             <th>Color</th>
-                            <th>Price</th>
-                            <th>Duration</th>
-                            <th>Description</th>
+                            <th>Price in €</th>
+                            <th>Price related to</th>
+                            
                             <th>Image</th>      
                             <th>User</th>
                         </tr>
@@ -37,12 +37,10 @@
                           <td><%= product.color %></td>
                           <td><%= product.price %></td>
                           <td><%= product.duration %></td>
-                          <td><%= product.description %></td>
+                          
                           <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
                           <td><%= product.user.username %></td>
-                          <td><%= link_to 'Show', product, class: "btn btn-info btn-sm" %></td>
-                          <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm" %></td>
-                          <td><%= link_to 'Delete', product, class: "btn btn-danger btn-sm",method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                          
                         </tr>
                       <% end %>
                     </tbody>
