--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,7 +65,7 @@
 
 	<div class="col-sm-4 col-lg-4 col-md-4">
 	    <div class="thumbnail">
-	       <a href="products/baby">  <%= image_tag ("baby.jpg") %>  </a>
+	       <a href="products/baby">  <%= image_tag ("baby.JPG") %>  </a>
 	        <div class="caption">
 	            <h4>
 	            	<a href="products/baby">Babies</a>
