--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,8 +1,6 @@
 body {
-  padding-top: 70px;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 10%;
+padding-top: 70px;
+padding-bottom: 50px;
 
 }
 
