--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,49 @@
-<h1>Sign up</h1>
+<div class="container">
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">
+          <h1>Sign up</h1>
+      </div>
 
 
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-<div class="col-lg-8 col-lg-offset-2">
-   <div class="well">
-      <div class="panel panel-info">
-        <div class="panel-body">
+      <div class="col-lg-8 col-lg-offset-2">
+         <div class="well">
+            <div class="panel panel-info">
+              <div class="panel-body">
 
-        <div class="form-group has-success">
+              <div class="form-group has-success">
 
-            <div class="form-group has-success"><%= f.label :email %><br />
-            <%= f.email_field :email, :autofocus => true, class: "form-control" %></div>
+                  <div class="form-group has-success"><%= f.label :email %><br />
+                  <%= f.email_field :email, :autofocus => true, class: "form-control" %></div>
 
-            <div class="form-group has-success"><%= f.label :username %><br />
-          	<%= f.text_field :username, class: "form-control" %></div>
+                  <div class="form-group has-success"><%= f.label :username %><br />
+                	<%= f.text_field :username, class: "form-control" %></div>
 
-            <div class="form-group has-success"><%= f.label :password %><br />
-            <%= f.password_field :password, class: "form-control" %></div>
+                  <div class="form-group has-success"><%= f.label :password %><br />
+                  <%= f.password_field :password, class: "form-control" %></div>
 
-            <div class="form-group has-success"><%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, class: "form-control" %></div>
+                  <div class="form-group has-success"><%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation, class: "form-control" %></div>
 
-            <div class="actions"><%= f.submit "Sign up", class: "btn btn-success" %></div>
-
-
+                  <div class="actions"><%= f.submit "Sign up", class: "btn btn-success" %></div>
 
 
-             <% end %>
+
+
+                   <% end %>
+              </div>
+            </div>
+          </div>
+            <div><%= render "devise/shared/links" %></div>
         </div>
       </div>
-    </div>
-      <div><%= render "devise/shared/links" %></div>
+      
   </div>
 </div>
-
 
 
