--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New product</h1>
+<div class="container">
 
-<%= render 'form' %>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">          
+           <h1>New product</h1>
+      </div>
+      
+			<%= render 'form' %>
+		</div>
+
+		 
+  </div>
+</div>
+
 
 
