available spalte zu Products hinzugefuegt

--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -23,6 +23,7 @@
                             
                             <th>Image</th>      
                             <th>User</th>
+                            <th>Available</th>
                         </tr>
                     </thead>
     
@@ -40,6 +41,8 @@
                           
                           <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
                           <td><%= product.user.username %></td>
+
+                          <td><%= product.active %></td>
                           
                         </tr>
                       <% end %>
