active checkbox hinzugefuegt und controller und views angepasst

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -48,7 +48,7 @@
                     <li>
                       <strong>Price:</strong>
                       <%= @product.price %> (€) related to 
-                      <strong>Duration:</strong>
+                      <strong>Price:</strong>
                       <%= @product.duration %>
                     </li>
                     <li>
