--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -20,61 +20,66 @@
       <div class="panel panel-info">
         <div class="panel-body">
 
-        <div class="form-group has-success">
+              <div class="checkbox">
+                <label><%= f.label :"Is your Product active?" %></label>
+                <%= f.check_box :active, :value=>"true" %> 
+                
+              </div>
 
-          <label class="control-label" for="inputSuccess"><%= f.label :title %></label>
+              <div class="form-group has-success">
+                <label class="control-label" for="inputSuccess"><%= f.label :title %></label>
 
-          <%= f.text_field :title, class: "form-control" %>
+                <%= f.text_field :title, class: "form-control" %>
+              </div>
 
-        </div>
-          <div class="form-group has-success">
-            <label class="control-label" for="inputSuccess"><%= f.label :category %></label>
-            
-            <%= f.select :category_id, Category.all.collect {|c| [ c.name, c.id ] }, { :include_blank => true, :selected => @product.category_id}, class: "form-control" %>
-      </div>
+              <div class="form-group has-success">
+                <label class="control-label" for="inputSuccess"><%= f.label :category %></label>
+                
+                <%= f.select :category_id, Category.all.collect {|c| [ c.name, c.id ] }, { :include_blank => true, :selected => @product.category_id}, class: "form-control" %>
+              </div>
 
-          <div class="form-group has-success">
-            <label class="control-label" for="inputSuccess"><%= f.label :target_group %></label>
+              <div class="form-group has-success">
+                <label class="control-label" for="inputSuccess"><%= f.label :target_group %></label>
 
-            <%= f.select :target_group, ["Ladies", "Girls", "Gentlemen", "Boys", "Babies" ], {:include_blank => true}, class: "form-control"  %>
-          </div>
-          <div class="form-group has-success">
-            <label class="control-label" for="inputSuccess"><%= f.label :size %></label>
-            <%= f.text_field :size, class: "form-control"  %>
-          </div>
-          <div class="form-group">
-            <%= f.label :color %><br>
-            <%= f.text_field :color, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :"Price in € " %><br>
-            <%= f.text_field :price, :placeholder =>"any prices in € or 'negotiable'",  class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :"Price is based on" %><br>
-            <%= f.text_field :duration, :placeholder =>"e.g days, week, month", class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= f.label :description %><br>
-            <%= f.text_area :description, class: "form-control" %>
-          </div>
+                <%= f.select :target_group, ["Ladies", "Girls", "Gentlemen", "Boys", "Babies" ], {:include_blank => true}, class: "form-control"  %>
+              </div>
+              <div class="form-group has-success">
+                <label class="control-label" for="inputSuccess"><%= f.label :size %></label>
+                <%= f.text_field :size, class: "form-control"  %>
+              </div>
+              <div class="form-group">
+                <%= f.label :color %><br>
+                <%= f.text_field :color, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"Price in € " %><br>
+                <%= f.text_field :price, :placeholder =>"any prices in € or 'negotiable'",  class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :"Price related to" %><br>
+                <%= f.text_field :duration, :placeholder =>"e.g days, week, month", class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :description %><br>
+                <%= f.text_area :description, class: "form-control" %>
+              </div>
 
-          <div class="form-group">
-            <%= f.label :"Add Image" %><br>
-            <%= f.file_field :image  %>
-          </div>
-          <div class="form-group">
-            <%= f.label :remote_image_url, "or Image URL" %><br />
-            <%= f.text_field :remote_image_url, class: "form-control" %>
-          </div>
+              <div class="form-group">
+                <%= f.label :"Add Image" %><br>
+                <%= f.file_field :image  %>
+              </div>
+              <div class="form-group">
+                <%= f.label :remote_image_url, "or Image URL" %><br />
+                <%= f.text_field :remote_image_url, class: "form-control" %>
+              </div>
 
-          </div>
-            </div>
+              </div>
+                </div>
 
-        <div class="actions">
-          <%= f.submit "Save Product", class: "btn btn-success"%>
-          <%= link_to 'Cancel', products_path, class: "btn btn-danger" %>
-        </div>    
+            <div class="actions">
+              <%= f.submit "Save Product", class: "btn btn-success"%>
+              <%= link_to 'Cancel', products_path, class: "btn btn-danger" %>
+            </div>    
       </div>
 
     </div> 
