--- a/app/views/products/_table.html.erb
+++ b/app/views/products/_table.html.erb
@@ -1,59 +1,40 @@
-<div class="bs-docs-section">
-
-  
+<div class="bs-example table-responsive">
+  <table class="table table-striped table-bordered table-hover ">
+      <thead>
+          <tr>
+              <th>Title</th>
+              <th>Category</th>
+              <th>Target group</th>
+              <th>Size</th>
+              <th>Color</th>
+              <th>Price in €</th>
+              <th>Price related to</th>
               
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1 id="tables">
-                    Products
-                </h1>
-            </div>
-            <div class="bs-example table-responsive">
-                <table class="table table-striped table-bordered table-hover ">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Category</th>
-                            <th>Target group</th>
-                            <th>Size</th>
-                            <th>Color</th>
-                            <th>Price in €</th>
-                            <th>Price related to</th>
-                            
-                            <th>Image</th>      
-                            <th>User</th>
-                            <th>Available</th>
-                        </tr>
-                    </thead>
-    
+              <th>Image</th>      
+              <th>User</th>
+              <th>Available</th>
+          </tr>
+      </thead>
 
-                    <tbody>
-                      <% @products.each do |product| %>
-                        <tr>
-                          <td class="table"><h4><%= link_to product.title, product_path(product) %></h4></td>
-                          <td ><%= product.category.name %></td>
-                          <td><%= product.target_group %></td>
-                          <td><%= product.size %></td>
-                          <td><%= product.color %></td>
-                          <td><%= product.price %></td>
-                          <td><%= product.duration %></td>
-                          
-                          <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
-                          <td><%= product.user.username %></td>
 
-                          <td><%= product.active %></td>
-                          
-                        </tr>
-                      <% end %>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+      <tbody>
+        <% products.each do |product| %>
+          <tr>
+            <td class="table"><h4><%= link_to product.title, product_path(product) %></h4></td>
+            <td ><%= product.category.name %></td>
+            <td><%= product.target_group %></td>
+            <td><%= product.size %></td>
+            <td><%= product.color %></td>
+            <td><%= product.price %></td>
+            <td><%= product.duration %></td>
+            
+            <td><%= image_tag product.image_url(:thumb) if product.image? %></td>
+            <td><%= product.user.username %></td>
 
+            <td><%= product.active %></td>
+            
+          </tr>
+        <% end %>
+      </tbody>
+  </table>
 </div>
-<br>
-
-
-
