--- a/app/views/products/baby.html.erb
+++ b/app/views/products/baby.html.erb
@@ -1,7 +1,35 @@
-<div class="container">
-                 
+<div class="bs-docs-section">
 
+  
+              
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+                    Availbale Products
+                </h1>
+            </div>
 
-  <%= render 'table' %>
-    <%= yield %>
-</div> 
+						<div> 
+						<%= render partial: "table", locals: {products: @products_active} %> 
+						<%= yield %>
+						</div>
+				</div>
+		</div>
+
+		<div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+                    Currently Not Available
+                </h1>
+            </div>
+
+						<div> 
+							<%= render partial: "table", locals: {products: @products_inactive} %> 
+							<%= yield %>
+						</div>
+				</div>
+		</div>
+		
+</div>
