--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,35 @@
-<h1>Editing product</h1>
+<div class="bs-docs-section">
 
-<%= render 'form' %>
+  
+              
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+                    Availbale Products
+                </h1>
+            </div>
 
+						<div> 
+						<%= render partial: "table", locals: {products: @products_active} %> 
+						<%= yield %>
+						</div>
+				</div>
+		</div>
+
+		<div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+                    Currently Not Available
+                </h1>
+            </div>
+
+						<div> 
+							<%= render partial: "table", locals: {products: @products_inactive} %> 
+							<%= yield %>
+						</div>
+				</div>
+		</div>
+		
+</div>
