--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,33 @@
 
 <%= link_to 'Insert New Product', new_product_path, class: "btn btn-success btn-df" %>
 
+<div class="bs-docs-section">
+
+  
+              
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+                    Availbale Products
+                </h1>
+            </div>
+
+						<div> <%= render partial: "table", locals: {products: @products_active} %> </div>
+				</div>
+		</div>
+
+		<div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+                    Currently Not Available
+                </h1>
+            </div>
+
+						<div> <%= render partial: "table", locals: {products: @products_inactive} %> </div>
+				</div>
+		</div>
+</div>
 
 
-<%= render 'table' %>
