--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,35 +1,16 @@
-<div class="bs-docs-section">
+<div class="container">
 
-  
-              
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1 id="tables">
-                    Availbale Products
-                </h1>
-            </div>
-
-						<div> 
-						<%= render partial: "table", locals: {products: @products_active} %> 
-						<%= yield %>
-						</div>
-				</div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="page-header">          
+           <h1>New product</h1>
+      </div>
+      
+			<%= render 'form' %>
 		</div>
 
-		<div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h1 id="tables">
-                    Currently Not Available
-                </h1>
-            </div>
-
-						<div> 
-							<%= render partial: "table", locals: {products: @products_inactive} %> 
-							<%= yield %>
-						</div>
-				</div>
-		</div>
-		
+		 
+  </div>
 </div>
+
+
