--- a/app/views/products/girl.html.erb
+++ b/app/views/products/girl.html.erb
@@ -6,7 +6,8 @@
         <div class="col-lg-12">
             <div class="page-header">
                 <h1 id="tables">
-                    Availbale Products
+                    Availbale Products <br> 
+                    <small><%= pluralize(@products_active.count, "Product") %></small>
                 </h1>
             </div>
 
@@ -21,7 +22,8 @@
         <div class="col-lg-12">
             <div class="page-header">
                 <h1 id="tables">
-                    Currently Not Available
+                    Currently Not Available <br> 
+                    <small><%= pluralize(@products_inactive.count, "Product") %></small>
                 </h1>
             </div>
 
