--- a/app/views/products/last.html.erb
+++ b/app/views/products/last.html.erb
@@ -6,7 +6,7 @@
         <div class="col-lg-12">
             <div class="page-header">
                 <h1 id="tables">
-                    Availbale Products
+                    Most Recent 
                 </h1>
             </div>
 
