--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,13 +28,17 @@
 
         <div class="form-group">
 
-          <label class="control-label">
-              <%= f.label :"My Product is available " %>
-                    
-              <%= f.check_box :active, {checked: true} %>
-            </label>  
+          <label class="control-label"><%= f.label :"My Product is currently ..." %></label>  
+            <div class ="radio">
+              <%= f.label :active, "avaiable" %>
+              <%= f.radio_button :active, true, :checked => true  %> 
+            </div>
+            <div class ="radio">
+              <%= f.label :active, "not available" %>
+              <%= f.radio_button :active, false%>
+             </div>
 
-          </div>       
+          </div>        
 
 
           <div class="form-group has-success">
