--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
     <!-- Add custom CSS here -->
     <link href="css/shop-homepage.css" rel="stylesheet">
     
-    <link href="http://bootswatch.com/amelia/bootstrap.css" rel="stylesheet">
+    <link href="http://bootswatch.com/amelia/bootstrap.css" rel="stylesheet"> 
+     <%= stylesheet_link_tag 'products.css' %>
+  
     
 
 
