--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,22 +14,23 @@
                 </h1>
             </div>
 
-						<div> <%= render partial: "table", locals: {products: @products_active} %> </div>
+		      <div> <%= render partial: "table", locals: {products: @products_active} %> </div>
 				</div>
 		</div>
 
-		<div class="row">
         <div class="col-lg-12">
             <div class="page-header">
                 <h1 id="tables">
                     Currently Not Available <br> 
-                    <small><%= pluralize(@products_inactive.count, "Product") %>
+                    <small><%= pluralize(@products_inactive.count, "Product") %></small>
                 </h1>
             </div>
 
-						<div> <%= render partial: "table", locals: {products: @products_inactive} %> </div>
-				</div>
-		</div>
+              <div> <%= render partial: "table", locals: {products: @products_inactive} %> </div>
+                </div>
+        </div>
+
+		
 </div>
 
 
