User und anzahl der user produkte in User angezeigt

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,6 +1,6 @@
 body {
 padding-top: 70px;
-padding-bottom: 50px;
+padding-bottom: 10px;
 
 }
 
@@ -47,4 +47,10 @@ position: absolute;
 bottom: 0px;
 left: 0px;
 padding: 0px;
+}
+
+#footer_b{
+text-align: center;
+position: absolute;
+bottom: 10px;
 }
