--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
       	<ul class="nav navbar-nav">
 		      <li class="link"><%= link_to "All Products", products_path %></li>
 		      <li class="link"><%= link_to "Make Insertion", new_product_path %></li>
-              <li class="link"><%= link_to "User", home_user_path %></li>
+              <li class="link"><%= link_to "User", users_all_user_path %></li>
 		      <li class="link"><%= link_to "About", home_about_path %></li>
               <li>
                 <%= form_tag("/products", method: "get", class: "navbar-form navbar-left") do %>
