--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,14 @@
     </div> 
 
   </div>
+
+  <footer class="bs-footer" role="contentinfo">  
+       
+            <div id="footer_b"><p>&copy by Mai 2014 </p> </div>    
+    
+  </footer>
+
+
 </body>
 
 </html>
