--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -35,7 +35,7 @@
                         <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
                     </li>
                     <li>
-                        <%= link_to "Logged in as " + current_user.username, edit_user_registration_path %>  
+                        <%= link_to "Edit profile: " + current_user.username, edit_user_registration_path  %>  
                     </li>
                     <% else %>
                     <li>
