--- a/app/views/users/_utable.html.erb
+++ b/app/views/users/_utable.html.erb
@@ -32,7 +32,7 @@
 
                 <th>
                   <% if params[:sorting] == "city" %>
-                    City
+                    User
                   <% else %>
                     <%= link_to "City", users_all_user_path(sorting: "city") %>
                   <% end %>
