an user profile gearbeitet

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,7 +25,7 @@
               <%= f.text_field :username, class: "form-control"  %></div>            
 
               <div class="form-group has-success"><%= f.label :gender %><br />
-              <%= f.select :gender, ["Woman", "Man" ], {:include_blank => true}, class: "form-control"  %></div>
+              <%= f.select :gender, ["Female", "Male" ], {:include_blank => true}, class: "form-control"  %></div>
 
               <div class="form-group has-success"><%= f.label :"Usually I have this size" %><br />
               <%= f.text_field :size, class: "form-control"  %></div>
