--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,9 +1,26 @@
-<div class="bs-docs-section">
 
-  
+
+
+<div class="container">
+  <div class="bs-docs-section"> 
               
-  <div class="bs-example table-responsive">
-    <table class="table table-striped table-bordered table-hover ">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-header">
+                <h1 id="tables">
+                     <%= @user.username %> <br> 
+                    <small>and <% if (@user.gender == "Male") %>
+                      his
+                      <% elsif (@user.gender == "Female") %>
+                      her
+                      <% else %>
+                       his/her
+                      <% end %> products</small>
+                </h1>
+            </div>
+
+            <div> 
+              <table class="table table-striped table-bordered  table-hover ">
         <thead>
             <tr>
                 <th>Products</th>
@@ -12,8 +29,8 @@
 
 
         <tbody>
-        	<tr>  
-        	 <td>
+          <tr>  
+           <td>
                 <%= @user.products.each do |p| %>
                   
                 <p><%= link_to p.title, product_path(p) %> </p>
@@ -22,7 +39,66 @@
           </tr>
         </tbody>
     </table>
+
+  <div class="row">
+    <div class="col-lg-12">
+        <div class="well">
+            <h2>That's Me</h2>
+
+          <div class="row">
+
+            <div class="col-lg-8" > 
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Something about me
+                    </h3>
+                </div>
+                <div class="panel-body">
+                 <p> <%= @user.description %></p> 
+                 <h4> Gender:  <%= @user.gender %>  </h4> 
+                 <h4> Usually I use this size: <%= @user.size %> </h4>    
+                 <h4> I live in: <%= @user.city%> </h4>                  
+                </div>                  
+              </div>
+            </div>
+
+            <div class="col-lg-4 " > 
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        How to contact me
+                    </h3>
+                </div>
+                <div class="panel-body">
+                 <h4> Phone: <%= @user.phone_number %> </h4> 
+                 <h4> E-mail:  <%= @user.email %>  </h4> 
+                 <h4> Adress: <%= @user.address %> </h4> 
+                 <h4> City: <%= @user.city%> </h4> 
+                </div>                  
+              </div>
+            </div>
+
+          </div>
+        </div>
+    </div>
+</div>
+
+
+
+</div>          
+
+        </div>
+    </div>
+            
+            </div>
+        </div>
+    </div>
   </div>
+</div>
+  
+              
+  
 </div>
   
 
