--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,7 +40,16 @@
               <%= f.text_field :phone_number, class: "form-control"  %></div>
 
               <div class="form-group has-success"><%= f.label :description %><br />
-              <%= f.text_area :description, class: "form-control"  %></div>
+              <%= f.text_area :description, :placeholder =>" write s short description about you", class: "form-control"  %></div>
+
+               <div class="form-group">
+                <%= f.label :"Add Avatar" %><br>
+                <%= f.file_field :avatar  %>
+              </div>
+              <div class="form-group">
+                <%= f.label :remote_avatar_url, "or Image URL" %><br />
+                <%= f.text_field :remote_avatar_url, class: "form-control" %>
+              </div>
 
 
               <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
