--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -70,7 +70,7 @@
           </div>
           <div class="form-group">
             <%= f.label :description %><br>
-            <%= f.text_area :description, class: "form-control" %>
+            <%= f.text_area :description,  :placeholder =>"write a short description about your offer", class: "form-control" %>
           </div>
 
           <div class="form-group">
@@ -79,7 +79,7 @@
           </div>
           <div class="form-group">
             <%= f.label :remote_image_url, "or Image URL" %><br />
-            <%= f.text_field :remote_image_url, class: "form-control" %>
+            <%= f.text_field :remote_image_url, :placeholder =>"don't use this field if you upload a photo from your pc", class: "form-control" %>
           </div>
 
           </div>
