--- a/app/views/users/_utable.html.erb
+++ b/app/views/users/_utable.html.erb
@@ -14,6 +14,8 @@
                   <% end %>
               </th>
 
+              <th>Avatar</th>
+
                 <th>
                   <% if params[:sorting] == "gender" %>
                     Gender
@@ -51,10 +53,13 @@
             <tr>              
               
               <td width="20%"><h4><%= link_to u.username, users_profile_path(id: u.id)  %><h4></td>
-              <td width="20%"><%= u.gender %></td>
-              <td width="20%"><%= u.size %></td>
-              <td width="20%"><%= u.city %></td>
-              <td width="20%"><%= link_to pluralize(u.products.count, "Product"),  users_profile_path(id: u.id)  %></td>
+              <td><a class="menue" width="20%">
+              <%= image_tag u.avatar_url(:thumb) if u.avatar? %>
+              <span><%= image_tag u.avatar_url(:normal2)  if u.avatar? %></span></a>
+              <td ><%= u.gender %></td>
+              <td ><%= u.size %></td>
+              <td ><%= u.city %></td>
+              <td ><%= link_to pluralize(u.products.count, "Product"),  users_profile_path(id: u.id)  %></td>
               
              <% end %>
         </tbody>
