--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -15,30 +15,12 @@
                       her
                       <% else %>
                        his/her
-                      <% end %> products</small>
+                      <% end %> offers</small>
                 </h1>
             </div>
 
-            <div> 
-              <table class="table table-striped table-bordered  table-hover ">
-        <thead>
-            <tr>
-                <th>Products</th>
-            </tr>
-        </thead>
+            
 
-
-        <tbody>
-          <tr>  
-           <td>
-                <%= @user.products.each do |p| %>
-                  
-                <p><%= link_to p.title, product_path(p) %> </p>
-                <% end %>
-              </td>
-          </tr>
-        </tbody>
-    </table>
 
   <div class="row">
     <div class="col-lg-12">
@@ -47,24 +29,16 @@
 
           <div class="row">
 
-            <div class="col-lg-8" > 
-              <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        Something about me
-                    </h3>
-                </div>
+            <div class="col-lg-4 " >
+
+               <div class="panel panel-primary">                
+                
                 <div class="panel-body">
-                 <p> <%= @user.description %></p> 
-                 <h4> Gender:  <%= @user.gender %>  </h4> 
-                 <h4> Usually I use this size: <%= @user.size %> </h4>    
-                 <h4> I live in: <%= @user.city%> </h4>                  
+                 <%= image_tag @user.avatar_url(:avatar) if @user.avatar? %>
                 </div>                  
               </div>
-            </div>
 
-            <div class="col-lg-4 " > 
-              <div class="panel panel-info">
+              <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         How to contact me
@@ -79,28 +53,48 @@
               </div>
             </div>
 
+            <div class="col-lg-8" > 
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Something about me
+                    </h3>
+                </div>
+                <div class="panel-body">
+                  <p> <%= @user.description %></p> 
+                 <h4> Gender:  <%= @user.gender %>  </h4> 
+                 <h4> Usually I use this size: <%= @user.size %> </h4>    
+                 <h4> I live in: <%= @user.city%> </h4>                  
+                </div>                  
+              </div>
+            </div>            
+
           </div>
         </div>
-    </div>
-</div>
 
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="well">
+            <h2>My Offers</h2>
 
+          <div class="row">
 
-</div>          
+            <div class="col-lg-12 " >
 
-        </div>
-    </div>
+            <div class="panel panel-warning">                
+                
+                <div class="panel-body">
+                 <%= render "uptable"%>
+                </div>                  
+              </div> 
             
-            </div>
         </div>
+
+
+
     </div>
-  </div>
 </div>
-  
-              
-  
-</div>
-  
+
 
 
 
